--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -4,24 +4,24 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "build": "npm install && tsc",
+    "build": "tsc",
     "start": "node dist/index.js"
   },
   "dependencies": {
     "@whiskeysockets/baileys": "^6.7.9",
-    "cors": "^2.8.5",
-    "express": "^4.21.1",
-    "pino": "^9.5.0",
-    "qrcode": "^1.5.4",
-    "ws": "^8.18.0"
-  },
-  "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.9.1",
     "@types/qrcode": "^1.5.5",
     "@types/ws": "^8.5.13",
-    "tsx": "^4.19.2",
-    "typescript": "^5.6.3"
+    "cors": "^2.8.5",
+    "express": "^4.21.1",
+    "pino": "^9.5.0",
+    "qrcode": "^1.5.4",
+    "typescript": "^5.6.3",
+    "ws": "^8.18.0"
+  },
+  "devDependencies": {
+    "tsx": "^4.19.2"
   }
 }
