--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -8,12 +8,12 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "^6.7.9",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.9.1",
     "@types/qrcode": "^1.5.5",
     "@types/ws": "^8.5.13",
+    "@whiskeysockets/baileys": "^7.0.0-rc.9",
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "pino": "^9.5.0",
